adds / prepares rootlesskit
corrections

corrects dealii-prepare without DEAL_II_VERSION

follow up

followup 2

followup 3

followup 4

f5

rootlesskit follow

fol

fol 7

--- a/candi.cfg
+++ b/candi.cfg
@@ -34,6 +34,7 @@ PACKAGES="load:dealii-prepare"
 
 # These are system dependencies that are often pre-installed:
 PACKAGES="${PACKAGES} once:podman"
+PACKAGES="${PACKAGES} once:rootlesskit"
 
 #########################################################################
 
